reduced image size, fixed 2 column text overlap, added description

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,8 @@ body{
   justify-content: center;
 }
 #nav-header-img{
-  width: 150px;
+  width: 190px;
+  height: 148px;
   align-self: center;
   margin: 0px 30px;
 }
@@ -35,7 +36,7 @@ body{
 }
 #nav-wrapper ul a{
 	display:block;
-	color:#888;
+	color:#666;
 	text-decoration:none;
 	font-weight:700;
 	font-size:14px;
@@ -80,9 +81,6 @@ body{
   margin: 10px 20px;
   word-wrap: break-word;
 }
-h1, h2, #store-image{
-  margin: 0px 0px 20px;
-}
 #image-header{
   display: flex;
   align-self: center;
@@ -126,11 +124,14 @@ h1, h2, #store-image{
   font-size: 24px;
   width: 100%;
 }
+.menu-content-container{
+  display: flex;
+  flex-direction: column;
+  padding: 5px 15px;
+}
 .menu-column{
   width: 50%;
   float: left;
-  display: flex;
-    flex-direction: column;
 }
 .menu-header{
   display: inline-block;
@@ -167,6 +168,7 @@ h1, h2, #store-image{
   background-image: url('storefront.jpg');
   background-position: center center;
   background-size: cover;
+  margin: 20px 0px;
 }
 
 /* Map */
